--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="releases/CornKeeper.x86_64"
+export_path="releases/1.0.0/linux/CornKeeper.x86_64"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -52,7 +52,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="releases/CornKeeper.exe"
+export_path="releases/1.0.0/windows/CornKeeper.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
